fix(model): create  new model

--- a/ML_Model/ML_Generator.ipynb
+++ b/ML_Model/ML_Generator.ipynb
@@ -2063,6 +2063,50 @@
         "\n",
         "print(\"Training R2 score:\", train_r2_score)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sklearn.metrics import r2_score\n",
+        "from tensorflow.keras import models, layers, callbacks\n",
+        "\n",
+        "# Define the input shape\n",
+        "input_shape = X_train.shape[1:]\n",
+        "\n",
+        "# Define the model architecture with enhancements\n",
+        "model = models.Sequential([\n",
+        "    layers.Dense(1024, activation=\"relu\", input_shape=input_shape),\n",
+        "    layers.Dropout(0.5),\n",
+        "    layers.BatchNormalization(),\n",
+        "    layers.Dense(1024, activation=\"relu\"),\n",
+        "    layers.Dropout(0.5),\n",
+        "    layers.BatchNormalization(),\n",
+        "    layers.Dense(1024, activation=\"relu\"),\n",
+        "    layers.Dropout(0.5),\n",
+        "    layers.BatchNormalization(),\n",
+        "    layers.Dense(1)\n",
+        "])\n",
+        "\n",
+        "# Compile the model with a learning rate scheduler\n",
+        "optimizer = tf.keras.optimizers.Adam()\n",
+        "model.compile(optimizer=optimizer, loss='mse', metrics=[tf.keras.metrics.MeanSquaredError()])\n",
+        "\n",
+        "# Implement early stopping and learning rate scheduler\n",
+        "early_stopping = callbacks.EarlyStopping(monitor='val_loss', patience=10, restore_best_weights=True)\n",
+        "lr_scheduler = callbacks.ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=5)\n",
+        "\n",
+        "# Train the model with callbacks\n",
+        "history = model.fit(X_train, y_train, epochs=10000, verbose=1, validation_data=(X_test, y_test), callbacks=[early_stopping, lr_scheduler])\n",
+        "\n",
+        "# Calculate R-squared (R2) score\n",
+        "y_train_pred = model.predict(X_train)\n",
+        "train_r2_score = r2_score(y_train, y_train_pred)\n",
+        "\n",
+        "print(\"Training R2 score:\", train_r2_score)"
+      ]
     }
   ],
   "metadata": {
