--- a/ML_Model/Converter_H5_To_JSON_and_BIN.ipynb
+++ b/ML_Model/Converter_H5_To_JSON_and_BIN.ipynb
@@ -1,36 +1,22 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Run in Google Colab Please :D"
-      ],
       "metadata": {
         "id": "XXnJfjcGa05j"
-      }
+      },
+      "source": [
+        "# Run in Google Colab Please :D"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Don't forget to upload the model.h5"
-      ],
       "metadata": {
         "id": "HgK93DhPa61M"
-      }
+      },
+      "source": [
+        "## Don't forget to upload the model.h5"
+      ]
     },
     {
       "cell_type": "code",
@@ -44,8 +30,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting tensorflowjs\n",
             "  Downloading tensorflowjs-4.20.0-py3-none-any.whl (89 kB)\n",
@@ -220,23 +206,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "saved_model_path = \"model.h5\""
-      ],
+      "execution_count": 5,
       "metadata": {
         "id": "p16r0jsHZ7B6"
       },
-      "execution_count": 5,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "saved_model_path = \"model.h5\""
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "! tensorflowjs_converter \\\n",
-        "  --input_format=keras \\\n",
-        "  {saved_model_path} \\\n",
-        "  \"./\""
-      ],
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -244,18 +225,94 @@
         "id": "QD508dhNZhQE",
         "outputId": "af868c5a-6fd7-4972-8805-d741be274a9b"
       },
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "2024-06-10 13:48:35.590183: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
             "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
             "2024-06-10 13:48:36.852268: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
           ]
         }
+      ],
+      "source": [
+        "! tensorflowjs_converter \\\n",
+        "  --input_format=keras \\\n",
+        "  {saved_model_path} \\\n",
+        "  \"./\""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Users\\Intel X Nvidia\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "import tensorflow as tf"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From c:\\Users\\Intel X Nvidia\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\keras\\src\\backend.py:1398: The name tf.executing_eagerly_outside_functions is deprecated. Please use tf.compat.v1.executing_eagerly_outside_functions instead.\n",
+            "\n",
+            "INFO:tensorflow:Assets written to: model/model\\assets\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Assets written to: model/model\\assets\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Load the Keras model\n",
+        "model = tf.keras.models.load_model('model/model.h5')\n",
+        "\n",
+        "# Save the model in the TensorFlow SavedModel format\n",
+        "tf.saved_model.save(model, 'model/model')"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.9.7"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
