--- a/ML_Model/ML_Generator.ipynb
+++ b/ML_Model/ML_Generator.ipynb
@@ -4770,7 +4770,17 @@
       "outputs": [],
       "source": [
         "# Alternatively, you can save the entire model (architecture + weights) to a single H5 file\n",
-        "model.save(\"model/model.h5\")"
+        "model.save(\"model_h5/model.h5\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Save the entire model in SavedModel format\n",
+        "model.save('model_tfserving')"
       ]
     }
   ],
